# colout

./: .gdb_history  .gitignore  .gitmodules  .kdev_include_paths  .travis.yml  CMakeDefinitions.txt  CMakeLists.txt  Jamroot  LICENSE  README  README.md  TODO  appveyor.yml  colout  colout.cpp  colout.kdev4  colout_cmake  colout_configure  colout_ctest  colout_perm  colout_valgrind  mk_theme.sh  update_themes.sh
.kdev4/: colout.kdev4
src/colout/: color.hpp  decl_palette.hpp  palette.cpp  palette.hpp  trace.hpp
src/colout/cli/: parse_cli.cpp  parse_cli.hpp  parse_colors.cpp  parse_colors.hpp  parse_options.hpp  runtime_cli_error.hpp
src/colout/utils/: c_string.hpp  enum_ops.hpp  fixed_array.hpp  get_lines.hpp  limited_array.hpp  overload.hpp  range.hpp  string_view.hpp  zstring.hpp
test/: boost_unit_tests.cpp  boost_unit_tests.hpp  color_test.cpp  escaped.hpp  palette_test.cpp  parse_colors_test.cpp
